--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,41 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
+
 @import './styles/base/resets';
+@import './styles/base/settings';
+@import './styles/components/FreeCodeCampLogo';
+@import './styles/components/TodoItem';
+@import './styles/components/TodoAdd';
+@import './styles/components/TodoList';
 
 .App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
   width: 100%;
+  background-color: $main-color;
+  font-family: 'Lato', sans-serif;
+}
+
+.TodoApp {
+  display: flex;
+  width: 400px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.TodoContainer {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  gap: 10px;
+  padding: 20px;
+  background-color: $white-color;
+}
+
+.TodoContainer__title {
+  font-size: 20px;
+  font-weight: bold;
+  align-self: center;
 }
