--- a/src/styles/components/_TodoItem.scss
+++ b/src/styles/components/_TodoItem.scss
@@ -6,7 +6,7 @@
   background-color: $light-color;
   color: $dark-color;
   border-radius: 5px;
-  transition: .1s ease all;
+  transition: .2s ease all;
 
   &:hover {
     background-color: $dark-color;
@@ -21,5 +21,16 @@
     &:hover {
       color: red;
     }
+  }
+}
+
+.Checked {
+  background-color: $light-gray;
+  text-decoration: line-through;
+
+  &:hover {
+    background-color: white;
+    color: $dark-color;
+
   }
 }
